# raytracing

./: .gitignore  CMakeLists.txt  README.md  main.cpp
.github/workflows/: ci.yml
include/: camera.h  color.h  display.h  hittable.h  hittable_list.h  interval.h  material.h  property.h  ray.h  scene.h  scene_factory.h  sphere.h  utils.h  vec3.h
progress_gallery/: cerinte.md
src/: camera.cpp  color.cpp  display.cpp  hittable_list.cpp  interval.cpp  material.cpp  scene.cpp  sphere.cpp  utils.cpp  vec3.cpp
tests/: test_color.cpp  test_hittable_list.cpp  test_interval.cpp  test_materials.cpp  test_ray.cpp  test_sphere.cpp  test_utils.cpp  test_vec3.cpp
